2008-11-14  Jeremy Cribb <jcribb@email.unc.edu>
	* xlswrite.m: modified documentation to better match Mathworks convention.
	* bin2d.m: same.
	* clipper.m: same.
	* cols.m: same.
	* count_dlim: same.
	* drawlines.m: same.
	* figurelist.m: same.
	* gen_pub_plotfiles.m: same.
	* header.m: same.
	* legend_reorder.m: same.
	* make_3dfmAnalysis_docs.m: same.
	* mat2txt.m: same.
	* parse_csv_int.m: same.
	* pretty_plot.m: same.
	* rows.m: same.
	* select_data_in_box.m: same.
	* slopper.m: same.
	* unixUTC.m: same. 
	
2008-10-30  Jeremy Cribb <jcribb@email.unc.edu>
	* select_data_in_box.m: added awareness of several series rather than just selecting the first one.

2008-09-16  Jeremy Cribb <jcribb@email.unc.edu>
	* gen_pub_plotfiles.m:  added svg output.

2008-07-09  Jeremy Cribb <jcribb@email.unc.edu>
	- select_data_in_box.m: added series handle to output.

2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
	see previous entry.  forgot to add files before commit.  done here.

2008-07-07  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added.  now cvs ignores .asv and .mat files (for this folder)
	* select_data_in_box.m: added array indicies of selection as an output.
	* pretty_plot.m: added argument handling and generated two pretty_plot types, one for 'screen' and one for nicely rendered 'eps' figures (for publication).
	* gen_pub_plotfiles.m: added.  Uses pretty_plot to generate several files for a given figure.  Pretty much a hack to save myself from repeatedly saving .eps, .png, .jpg, etc... files for the figure.
	* legend_reorder.m: added.  reorders legend entries according to input vector.

2008-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	* count_dlim.m: added.  returns delimiter count per line.

2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	* pretty_plot.m: added exception handling to the changing of figure elements.

2007-05-02  Kalpit Desai <kvdesai@email.unc.edu>
	* slopper.m: Minor changes and a bit cleaning up.
